overflow fix

--- a/src/app/features/board/board.responsive.scss
+++ b/src/app/features/board/board.responsive.scss
@@ -76,7 +76,7 @@
     /* Firefox */
     -ms-overflow-style: none;
     /* IE & alter Edge */
-    overflow: visible !important;
+    overflow: hidden !important;
   }
 
   /* Chrome, Safari, neuer Edge */
