--- a/src/app/features/board/modal-board/modal-board.component.scss
+++ b/src/app/features/board/modal-board/modal-board.component.scss
@@ -208,11 +208,11 @@
 
     /* Container für die Buttons am Ende */
     .task-modal-buttons {
-        position: relative;
+        position: absolute;
         display: flex;
         gap: 20px;
-        bottom: -20px;
-        left: 250px;
+        bottom: 5%;
+        left: 65%;
 
 
         svg:hover {
